--- a/css/header.css
+++ b/css/header.css
@@ -4,13 +4,49 @@
   border-bottom: 1px solid rgb(182, 181, 181);
   margin-bottom: 40px;
   padding: 15px;
+  background-color: #0B1C26;
 }
 
-#navTitle{
-  /*padding-left: 20px;*/
+#background{
+  min-height: 100%;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -2;
+  /* position: absolute;
+  top: -20px;
+  height: 110vh;
+  overflow: hidden; */
 }
+
 
 #headerButtons{
   display: flex;
   align-items: center;
+}
+
+#navTitle, #greetingBox{
+  font-family: 'Macondo', cursive;
+  color: #64b8c2;
+}
+
+#navBut {
+  color: #589EA6;
+  font-family: 'Macondo', cursive;
+  border: 1px solid #589EA6;
+  border-radius: 10px;
+  margin: 0 10px;
+  box-shadow: 0.2em 0.2em 0.2em #326773;
+}
+
+#navBut:hover{
+  color: #0B1C26;
+  background-color: #589EA6;
 }
